# StreamMill

./: README.md
adl/: AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  TODO  acconfig.h  atlas-linux.el  config.cache  config.h  config.h.in  config.status  config.status.lineno  configure  configure.in  hash.cc  log  mkinstalldirs
adl/BerkeleyDB/include/: db_cxx.h
adl/BerkeleyDB/lib/: libdb-4.0.la  libdb-4.0.so-old
adl/aggr/: aggr.dcl  smm__dissembleFlowers.aggr  smm__evaluateClassifier.aggr  smm__learnClassifier.aggr
adl/autom4te.cache/: output.0  requests  traces.0  traces.1
adl/bug/: bug1.adl  error list of atlas  rtree
adl/bug/CVS/: Entries  Repository
adl/conf/: basic.h
adl/conf/CVS/: Entries  Repository
adl/dbug/: Makefile  Makefile.am  Makefile.in  README  dbug.c  dbug.doc  dbug.h  dbug.qr  factorial.c  main.c  tags  user.t.uu
adl/dbug/.deps/: dbug.Po
adl/dbug/CVS/: Entries  Repository
adl/docs/: DistributedSMM  Makefile.am  design  design.cc  design_sel.cc  document.tex  evalqg.eps  gbhash.eps  imdb.tex  implementation.tex  stack.eps  syntax.tex  usage.tex
adl/docs/Atlas_manual/: aggregates.tex  apriori.tex  datastructures.tex  docdriver.tex  document.tex  examples.tex  external.tex  introduction.tex  ref.tex  sql.tex  tabledcl.tex  tablefunc.tex  tfunc.tex  trie.eps  trieanti.eps  triefinal.eps  trieprune.eps
adl/docs/CVS/: Entries  Repository
adl/docs/ESL_manual/: ESL_manual.tex  client.tex
adl/editors/: CRedit.INI  WinEdt.ini  atlas-linux.el  atlas.el  atlasRun.bat  syntax_CREdit.ini
adl/editors/CVS/: Entries  Repository
adl/examples/CVS/: Repository
adl/examples/dbscan/: ca  dbscan.cpp  dbscan_btree.adl  dbscan_const  rtree_load.adl  run_btree
adl/examples/stream/: auction.adl  packet_log.adl  packets.adl
adl/exe/test/: adltestsuittmp  null  testsuit
adl/im_db/: Makefile  Makefile.am  Makefile.in  Makefile.jkong  buffer.c  hash-arbitrary.c  hash-arbitrary.h  im_cursor.c  im_db_buffer.h  im_db_env_method.c  im_db_err.c  im_debug.c  im_rel.c  mylib.c  tags
adl/im_db/manual/: document.tex
adl/java/CVS/: Repository
adl/release/atlas/: NEWS  README
adl/rtree/: Makefile  Makefile.am  Makefile.in  latestrtree.txt  rtree.cc  rtreedoc.tex  tags  test01.c  test06.c  test11.c  test12.c  test13.c  test14.c  test15.c  test_cdel.c  trash.c  try.c
adl/rtree/test/: testsuit
adl/sql/: Makefile  Makefile.adlcc  Makefile.am  Makefile.eslc_aggr  Makefile.eslcc_aggr  Makefile.in  Makefile.in.backup  Makefile.win  SMLog.cc  SMLog.h  abstypes.h  absyn.cc  absyn.h  adl_obj.cc  adl_obj.h  adl_sys.cc  adl_yacc.cc  adl_yacc.grm  adl_yacc.grm.output  adl_yacc.grm.tab.c  adl_yacc.grm.tab.h  adl_yacc.h  adlc.cc  adlcc  adlhash.cc  adlhash.h  adllib.cc  aggr_info.cc  aggr_info.h  atlas  atlaswin.cc  atlaswin_test.cc  basic.h  bind.cc  builtin.cc  design-agg.cc  design.cc  env.cc  err.cc  err.h  (+52 more)
adl/sql/PlayGround/: Makefile.adlcc  aggr_mcount.cc
adl/sql/classify/: EBNBTest.adl  EBaNBTest.adl  EGeneralizedBoostDTree.adl  EnsBagNaiveBayesian.adl  EnsBoostNaiveBayesian.adl  HDArrCNaiveBayesian.adl  HDContCNaiveBayesian.adl  HDDiscCNaiveBayesian.adl  HDSSimpleNaiveBayesian.adl  IRArrCNaiveBayesian.adl  IRContCNaiveBayesian.adl  IncDBScan.adl  MTGenBagDTree.adl  NB.adl  NBC.adl  NBHD.adl  NBTest.adl  NaiveBayesian.adl  NaiveBayesian2.adl  OneFieldNaiveBayesian.adl  SSimpleDecisionTree.adl  SSimpleDecisionTree.iris.adl  SSimpleDecisionTree.irisH.adl  SSimpleNaiveBayesian.adl  SSimpleNaiveBayesian.iris.adl  SimpleDecisionTree.adl  SimpleDecisionTree1.adl  SimpleNaiveBayesian.adl  TGeneralizedBagDTree.adl  TGeneralizedBoostDTree.adl  abc.txt  hd.txt  iris.data  iris1.data  iris2.data  test-dbscan.adl  test.adl  testpruning.adl
adl/sql/esl/: GUIClient.cc  buffer.bef  buffer.cc  buffer.h  compiler.cc  driver.cc  driver.h  esl.cc  eslc.cc  eslt.cc  monitor.cc  monitor.h  querySchdl.102  querySchdl.cc  querySchdl.cc-modi  stmt.cc  stmt.h  strategy.cc  strategy.h  windowBuf.cc  winjoin.h
adl/sql/swim.1.0.1/: README
adl/sql/uda-swim/: Makefile  Makefile.adlcc  abc.data  asc2stream  err  funswim.cc  funswimfis.adl  funswimfis.cc  makelib  out  paramTable.data  swimfis.adl  swimfis.cc  swimlib.c  swimlib.h  test.adl  test.cc  tmp.data  tmp.stream  tmp.stream1
adl/sql/updateSM/: atlaswin_test
adl/test/: ._139711960_realnum  Makefile  Makefile.adlcc  Makefile.am  Makefile.in  Makefile.win  _adl_db_Sessions  addtest  addtest.win  blandmark.adl  classify.adl  dos2unix  exists.adl  localmin.adl  nasdint2.txt  null  runadl  tabf_dll.c  testlib  testsuit  testsuit.win
adl/test/lib/: Makefile  gini.c  makelib  sample.c  tabf.c
adl/test/src/: Category2.adl  Category3.adl  Makefile.adlcc  aggr_decas.adl  aggr_decas.result  aggr_decas2.adl  aggr_decas2.result  aggr_decas3.adl  aggr_decas3.result  aggr_leastcol.adl  aggr_leastcol.result  aggr_mcount.adl  aggr_minpointvalue.adl  aggr_minpointvalue.result  aggr_nested.adl  aggr_nested.result  aggr_pkey.adl  aggr_pkey.result  aggr_revert.adl  aggr_revert.result  aggr_revert2.adl  aggr_revert2.result  aggr_share.adl  aggr_share.result  baggr.adl  baggr.result  baggr_cnt.adl  baggr_cnt.result  baggr_cnt1.adl  baggr_cnt1.result  baggr_cnt2.adl  baggr_cnt2.result  baggr_null.adl  baggr_null.result  baggr_sum.adl  baggr_sum.result  baggr_sum1.adl  baggr_sum1.result  bload.result  classifytest.adl  (+147 more)
(+496 files in other folders)
