dnl Process this file with autoconf to produce a configure script.
AC_INIT(sql/adl_sys.h)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(adl, 0.5)

dnl Checks for programs.
AC_PROG_YACC
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
dnl Replace `main' with a function in -ldl:
AC_CHECK_LIB(dl, dlopen)
dnl Replace `main' with a function in -lhistory:
AC_CHECK_LIB(history, main)
dnl Replace `main' with a function in -lm:
AC_CHECK_LIB(m, main)
dnl Replace `main' with a function in -ltermcap:
AC_CHECK_LIB(termcap, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h malloc.h sgtty.h strings.h sys/file.h sys/ioctl.h sys/time.h termio.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_MODE_T
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_STRCOLL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gettimeofday getwd mkdir putenv rmdir select unlink)
    
dnl 
dnl debugging
dnl 
AC_ARG_ENABLE(debug,
    [  --enable-debug		enable debugging],
    [
    AC_DEFINE(YYDEBUG)
    AC_DEFINE(YYERROR_VERBOSE)
    ], 
    [AC_DEFINE(DBUG_OFF)
    ])

AC_OUTPUT(dbug/Makefile sql/Makefile test/Makefile im_db/Makefile rtree/Makefile Makefile)
